# e-commerce__electronica-provisional

./: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json  vercel.json  versel.json
bases_Apis/smartpoint_api/: .env  Cargo.toml  README.txt
bases_Apis/smartpoint_api/.sqlx/: query-02ec31e484c91bfb17ff907aba3a9021bd3e150bc6125897cc7efcfa32279b76.json  query-0a1f32a7bf17e4b1f82ff3bedd8d861780f02bbcae50e455777fcd1c75d32581.json  query-0d1d4fa8e1b6148558c284a1d646db2b0fa461d7c49ed645dfe2aea706239f74.json  query-21a6ab7657b6a88923cbbce575ecd4a39f12f7e0570c8c83accb04c882d3fa35.json  query-37d5733bfa6c017553777d0c86976737846d55aa3fc9dcb192178269a15f2e31.json  query-38783c155592ba1304172c2414dd77e190dba29fdd30875572352737ff3bd0d2.json  query-5075ff18bd3aa2a6c089a52d2bfa5c170935d093079aa7eba647f98be78083b0.json  query-50ddc48e1b59848242983d18af1d3969228090053b97d7c5369509d90e9e2224.json  query-522c281755d47d5ea1795d1eede26c8e7c2e23b9efa273ee5ddfd4d96047fb10.json  query-6e39777d02b8c2c42d69d84cb55c6c24a2457bf7f4211b74d0be794c697d3d77.json  query-773978d02b113ee1d1c827be988f07da6188b8dbe3f5defe1e89bbdd2ebc04ce.json  query-7746fd1e097af4bc501145b97040236fb49c110b0a3fc7edaa70b8f3b93fb4e1.json  query-86ac96d1cd06a8cf491328a9e0976a0c9ea6409dacac56724d46862ac7fad314.json  query-9033d82fa1a6f143e1a69ee0c9670d3ae5d2c800a0d2792a0d3165b328aa5be1.json  query-9455dd1b98d1589080a5d448a7a49cb096242985c68ad7db1913530b723630c7.json  query-abb663f8536ee95f32c5e6ee20f9bd4f8ab6832ce703e223de9a7dd4432fb076.json  (+4 more)
bases_Apis/smartpoint_api/src/: main.rs
(+161 files in other folders)
