[package]
name = "smartpoint_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"

# Libreria rust_decimal
rust_decimal = { version = "1.35", features = ["serde-float"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "json",
    "rust_decimal"
] }

